--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        
-        <script src="" async defer></script>
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/adobo.html">Adobo</a>
     </body>
 </html>
