--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -10,7 +10,33 @@
     </head>
     <body>
         <h1>Adobo Recipe</h1>
-        
+        <img src="../img/pork-adobo.jpg" alt="porkadobo" width="200px" height="200px">
+        <h2>Description</h2>
+        <p>
+            Considered by some as the pride of Filipino cuisine, Pork Adobo is definitely a favorite among many around the world. For this, we cook pork slices in a perfect mix of soy sauce, 
+            vinegar, and garlic to make this savory and sour viand.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Pork belly</li>
+            <li>Garlic</li>
+            <li>Dried bay leaves</li>
+            <li>Vinegar</li>
+            <li>Soy sauce</li>
+            <li>Peppercorn</li>
+            <li>Water</li>
+            <li>Salt</li>
+        </ul>
+        <h2>How to Cook Pork Adobo</h2>
+        <ol>
+            <li>Combine the pork belly, soy sauce, and garlic then marinade for at least 1 hour</li>
+            <li>Heat the pot and put-in the marinated pork belly. Cook this all up for a few minutes</li>
+            <li>Pour the remaining marinade including the garlic</li>
+            <li>Add water, whole peppercorn, and dried bay leaves, Then bring your mixture to a boil. Simmer for 40 minutes to 1 hour</li>
+            <li>Put the vinegar inside and simmer for 12 to 15 minutes</li>
+            <li>Add salt to taste</li>
+            <li>Serve hot. Share and enjoy!</li>
+        </ol>
         <script src="" async defer></script>
     </body>
 </html>
