--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Sinigang Recipe</h1>
+        <h1>Pork Sinigang Recipe</h1>
+        <img src="../img/pork-sinigang.jpg" alt="Pork Sinigang" width="200px" height="200px">
+        
         <script src="" async defer></script>
     </body>
 </html>
