--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/adobo.html">Adobo</a>
+        <ul>
+            <li><a href="./recipes/adobo.html">Pork Adobo</a></li>
+            <li><a href="./recipes/sinigang.html">Pork Sinigang</a></li>
+        </ul>
+        
+        
+
     </body>
 </html>
