Add Description, Ingredients, and How to Cook sections

--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -11,7 +11,29 @@
     <body>
         <h1>Pork Sinigang Recipe</h1>
         <img src="../img/pork-sinigang.jpg" alt="Pork Sinigang" width="200px" height="200px">
-        
+        <h2>Description</h2>
+        <p>
+            Sinigang is a sour soup native to the Philippines. This recipe uses pork as the main ingredient. 
+            Other proteins and seafood can also be used. Beef, shrimp, fish are commonly used to cook sinigang.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Pork belly</li>
+            <li>Young tamarind</li>
+            <li>Water Spinach</li>
+            <li>String beans</li>
+            <li>Eggplant</li>
+            <li>Daikon radish</li>
+            <li>Long Green Pepper</li>
+        </ul>
+        <h2>How to Cook Pork Sinigang</h2>
+        <ol>
+            <li>Extract The Flavors From The Tamarind</li>
+            <li>Boil The Tamarind Broth And Cook The Meat</li>
+            <li>Add The Vegetables Sequentially</li>
+            <li>Season It And Then Add The Remaining Ingredients</li>
+            <li>Serve hot and enjoy</li>
+        </ol>
         <script src="" async defer></script>
     </body>
 </html>
