--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="./recipes/adobo.html">Pork Adobo</a></li>
             <li><a href="./recipes/sinigang.html">Pork Sinigang</a></li>
+            <li><a href="./recipes/menudo.html">Pork Menudo</a></li>
         </ul>
         
         
